test/fail_compilation/class2.d
class C
{
    // Templated identity opAssign
    void opAssign(T)(T rhs){}
}
